--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/section1.css">
     <link rel="stylesheet" href="assets/css/sectiontwo.css">
     <link rel="stylesheet" href="assets/css/section4.css">
-    <link rel="stylesheet" href="assets/css/section5.css">
+    <link rel="stylesheet" href="assets/css/Section5.css">
     <link rel="stylesheet" href="assets/css/section6.css">
     <link rel="stylesheet" href="assets/css/sectionseven.css">
     <link rel="stylesheet" href="assets/css/section8.css">
